# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  20 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +app-emulation/vmware-workstation-tools/files/5.5.3/000_all_initd-scripts.
  patch:
  Added new 5.5.3 version of vmware-workstation-tools.

  18 Nov 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Did some work on the vmware-server-tools ebuild, inspired by Chris.
  It now builds the modules and installs the revelant files automatically.
  TODO: Comment out the module building from the config script.
  TODO: Fix some of the inconsistencies between /opt/vmware/tools and
        /opt/vmware/server/tools usage.

  17 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-esx-tools/vmware-esx-tools-3.0.1.ebuild,
  +app-emulation/vmware-esx-tools/vmware-esx-tools-3.0.1-r1.ebuild:
  Added a new revision of the ESX tools, which should work with the new
  eclass. I have not tested it yet, but will do so next week if someone else
  hasn't let me know that it works by then.

  16 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +app-emulation/vmware-workstation-tools/files/5.5.2/000_all_initd-scripts.
  patch:
  Added the 5.5.2 directory to vmware-workstation-tools, so it'll patch
  correctly.

  16 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +app-emulation/vmware-esx-tools/files/90vmware-tools,
  +app-emulation/vmware-esx-tools/files/vmware-esx-tools,
  +app-emulation/vmware-esx-tools/files/vmware-esx-tools.rc,
  +app-emulation/vmware-esx-tools/files/xorg.conf,
  +app-emulation/vmware-esx-tools/metadata.xml:
  Initial import of ESX tools. This should work, but requires some manual
  intervention. Before running the vmware-config-tools.pl, you need to rmmod
  pcnet32. You will also need to rm /etc/vmware-tools/not_configured and
  /etc/init.d/vmware-tools start afterwards. I will be working on making sure
  this works with the eclass soon enough with a -r1 revision. Feel free to use