@@ -1,57 +1,0 @@
-# ChangeLog for app-emulation/vmware-linux-tools
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/vmware-workstation-tools/ChangeLog,v 1.4 2006/05/08 13:56:33 wolf31o2 Exp $
-
-  08 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> files/4.5.2/locations,
-  files/5.0.0/locations, files/4.5.2/vmware-workstation-tools,
-  files/5.0.0/vmware-workstation-tools,
-  vmware-workstation-tools-4.5.2.ebuild,
-  vmware-workstation-tools-5.0.0.ebuild:
-  Initial updates for bug #88307. This is not quite complete yet, nor tested,
-  so the package is currently masked. I am working on making this much easier
-  and more transparent for the user, by reusing code from the
-  vmware-workstation ebuilds.
-
-  08 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
-  files/4.5.2/vmware-workstation-tools,
-  files/5.0.0/vmware-workstation-tools:
-  Removed copyright assignment to VMware Inc, since the script had few
-  similarities to the original and was written by Stuart Herbert
-  <stuart@gentoo.org>. Closing bug #110931.
-
-  08 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
-  vmware-workstation-tools-4.5.2.ebuild,
-  vmware-workstation-tools-5.0.0.ebuild:
-  Initial cleanup after epkgmove.
-
-*vmware-workstation-tools-5.0.0 (08 May 2006)
-*vmware-workstation-tools-4.5.2 (08 May 2006)
-
-  08 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
-  +files/4.5.2/vmware-workstation-tools, +files/5.0.0/locations,
-  +files/4.5.2/locations, +files/4.5.2/xorg.conf,
-  +files/5.0.0/vmware-workstation-tools, +files/5.0.0/xorg.conf,
-  +metadata.xml, +vmware-workstation-tools-4.5.2.ebuild,
-  +vmware-workstation-tools-5.0.0.ebuild:
-  Moved from app-emulation/vmware-linux-tools to
-  app-emulation/vmware-workstation-tools.
-
-  08 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml:
-  Removed maintainer tag to reclaim maintainership by the herd, since there
-  are open bugs and there hasn't been a commit by the maintainer in over a
-  year.
-
-*vmware-linux-tools-5.0.0 (30 Apr 2005)
-
-  30 Apr 2005; Stuart Herbert <stuart@gentoo.org> +files/5.0.0/locations,
-  +files/5.0.0/vmware-linux-tools, +files/5.0.0/xorg.conf,
-  vmware-linux-tools-4.5.2.ebuild, +vmware-linux-tools-5.0.0.ebuild:
-  Initial import
-
-*vmware-linux-tools-4.5.2 (18 Feb 2005)
-
-  18 Feb 2005; Stuart Herbert <stuart@gentoo.org> +metadata.xml,
-  +files/4.5.2/locations, +files/4.5.2/vmware-linux-tools,
-  +files/4.5.2/xorg.conf, +vmware-linux-tools-4.5.2.ebuild:
-  Initial import
-
